--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -153,8 +153,8 @@ play_15 : "• ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ\n\nɪ ᴄᴀ
 play_16 : "ɴᴏ ᴀᴄᴛɪᴠᴇ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ\n\nᴛᴏ ᴜsᴇ ғᴏʀᴄᴇ ᴩʟᴀʏ, ᴛʜᴇʀᴇ ᴍᴜsᴛ ʙᴇ ᴀɴ ᴀᴄᴛɪᴠᴇ ᴠᴏɪᴄᴇᴄʜᴀᴛ"
 play_17 : "ᴘʟᴇᴀsᴇ ᴛᴜʀɴ ᴏɴ ᴠɪᴅᴇᴏᴄʜᴀᴛ, ɪ'ᴍ ᴜɴᴀʙʟᴇ ᴛᴏ sᴛʀᴇᴀᴍ ᴜʀʟs"
 play_18 : "<b>ᴜsᴀɢᴇ :</b> /play [sᴏɴɢ ɴᴀᴍᴇ/ʏᴏᴜᴛᴜʙᴇ ᴜʀʟ/ʀᴇᴘʟʏ ᴛᴏ ᴀ ᴀᴜᴅɪᴏ/ᴠɪᴅᴇᴏ ғɪʟᴇ]"
-play_19 : "Queued Playlist :"
-play_20 : "Queued Position-"
+play_19 : "Qᴜᴇᴜᴇᴅ ᴘʟᴀʏʟɪꜱᴛ :"
+play_20 : "Qᴜᴇᴜᴇᴅ ᴘᴏꜱɪᴛɪᴏɴ-"
 play_21 : "ᴀᴅᴅᴇᴅ {0} ᴛʀᴀᴄᴋs ᴛᴏ ǫᴜᴇᴜᴇ\n\n<b>ᴄʜᴇᴄᴋ :</b> <a href={1}>ᴄʟɪᴄᴋ ʜᴇʀᴇ</a>"
 play_22 : "sᴇʟᴇᴄᴛ ᴛʜᴇ ᴍᴏᴅᴇ ɪɴ ᴡʜɪᴄʜ ʏᴏᴜ ᴡᴀɴᴛ ᴛᴏ ᴘʟᴀʏ ᴛʜᴇ ǫᴜᴇʀɪᴇs ɪɴsɪᴅᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ : {0}"
 
@@ -174,8 +174,8 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ"
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n✨ <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>• Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>• Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}"
-stream_2 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>• Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
+stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ꜱᴛᴀʀᴛᴇᴅ 🎶</b>\n<b>ʟᴇᴛ'ꜱ ᴄʀᴇᴀᴛᴇ ᴜɴꜰᴏʀɢᴇᴛᴛᴀʙʟᴇ ᴍᴜꜱɪᴄᴀʟ ᴍᴏᴍᴇɴᴛꜱ ᴛᴏɢᴇᴛʜᴇʀ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠɪᴅᴇᴏ ᴄʜᴀᴛ ᴀɴᴅ ʟᴇᴛ'ꜱ ᴇɴᴊᴏʏ ᴛʜᴇ ᴍᴜꜱɪᴄ ᴛᴏɢᴇᴛʜᴇʀ</b>\n<b>ᴅɪꜱᴄᴏᴠᴇʀ ᴛʜᴇ ᴍᴀɢɪᴄ ᴏꜰ ᴇᴀᴄʜ ᴛʀᴀᴄᴋ ᴀꜱ ᴡᴇ ᴇxᴘʟᴏʀᴇ ᴀ ᴠᴀʀɪᴇᴛʏ ᴏꜰ ꜱᴏᴜʟꜰᴜʟ ᴍᴇʟᴏᴅɪᴇꜱ ᴛʜʀᴏᴜɢʜᴏᴜᴛ ᴛʜᴇ ꜱᴇꜱꜱɪᴏɴ 💗</b>"
+stream_2 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}\n➖➖➖➖➖➖➖➖➖➖➖"
 
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ 🍁"
