--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,7 +174,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ"
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n✨ <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ꜱᴛᴀʀᴛᴇᴅ 🎶</b>\n<b>ʟᴇᴛ'ꜱ ᴄʀᴇᴀᴛᴇ ᴜɴꜰᴏʀɢᴇᴛᴛᴀʙʟᴇ ᴍᴜꜱɪᴄᴀʟ ᴍᴏᴍᴇɴᴛꜱ ᴛᴏɢᴇᴛʜᴇʀ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠɪᴅᴇᴏ ᴄʜᴀᴛ ᴀɴᴅ ʟᴇᴛ'ꜱ ᴇɴᴊᴏʏ ᴛʜᴇ ᴍᴜꜱɪᴄ ᴛᴏɢᴇᴛʜᴇʀ</b>\n<b>ᴅɪꜱᴄᴏᴠᴇʀ ᴛʜᴇ ᴍᴀɢɪᴄ ᴏꜰ ᴇᴀᴄʜ ᴛʀᴀᴄᴋ ᴀꜱ ᴡᴇ ᴇxᴘʟᴏʀᴇ ᴀ ᴠᴀʀɪᴇᴛʏ ᴏꜰ ꜱᴏᴜʟꜰᴜʟ ᴍᴇʟᴏᴅɪᴇꜱ ᴛʜʀᴏᴜɢʜᴏᴜᴛ ᴛʜᴇ ꜱᴇꜱꜱɪᴏɴ 💗</b>"
+stream_1 : "<b>ᴍᴜꜱɪᴄ ꜱᴇꜱꜱɪᴏɴ ꜱᴛᴀʀᴛᴇᴅ 🎶</b>\n<b>ʟᴇᴛ'ꜱ ᴄʀᴇᴀᴛᴇ ᴜɴꜰᴏʀɢᴇᴛᴛᴀʙʟᴇ ᴍᴜꜱɪᴄᴀʟ ᴍᴏᴍᴇɴᴛꜱ ᴛᴏɢᴇᴛʜᴇʀ</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• ɴᴏᴡ ꜱᴛʀᴇᴀᴍɪɴɢ :</b> <a href={0}>{1}</a>\n<b>• ᴅᴜʀᴀᴛɪᴏɴ : {2} ᴍɪɴ</b>\n<b>• ꜱᴇʟᴇᴄᴛᴇᴅ ʙʏ : {3}</b>\n➖➖➖➖➖➖➖➖➖➖➖\n<b>ᴊᴏɪɴ ᴛʜᴇ ᴠɪᴅᴇᴏ ᴄʜᴀᴛ ᴀɴᴅ ʟᴇᴛ'ꜱ ᴇɴᴊᴏʏ ᴛʜᴇ ᴍᴜꜱɪᴄ ᴛᴏɢᴇᴛʜᴇʀ</b>\n<b>ᴅɪꜱᴄᴏᴠᴇʀ ᴛʜᴇ ᴍᴀɢɪᴄ ᴏꜰ ᴇᴀᴄʜ ᴛʀᴀᴄᴋ ᴀꜱ ᴡᴇ ᴇxᴘʟᴏʀᴇ ᴀ ᴠᴀʀɪᴇᴛʏ ᴏꜰ ꜱᴏᴜʟꜰᴜʟ ᴍᴇʟᴏᴅɪᴇꜱ ᴛʜʀᴏᴜɢʜᴏᴜᴛ ᴛʜᴇ ꜱᴇꜱꜱɪᴏɴ 💗</b>"
 stream_2 : "<b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ</b>\n\n➖➖➖➖➖➖➖➖➖➖➖\n<b>• Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>• Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}\n➖➖➖➖➖➖➖➖➖➖➖"
 
 
