--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -186,7 +186,7 @@ S_B_2 : "ꜱᴜᴘᴘᴏʀᴛ ✨"
 S_B_3 : "ᴀᴅᴅ ᴍᴇ 🧸"
 S_B_4 : "ʜᴇʟᴘ & ᴄᴏᴍᴍᴀɴᴅꜱ 🚀"
 S_B_5 : "ᴏᴡɴᴇʀ 🕊️"
-S_B_6 : "ᴄʜᴀɴɴᴇʟ ❄️"
+S_B_6 : "ꜱᴜᴘᴘᴏʀᴛ ❄️"
 S_B_7 : "ꜱᴏᴜʀᴄᴇ ᴄᴏᴅᴇ ☁️"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ 👀"
 S_B_9 : "sᴜᴩᴩᴏʀᴛ 🥀"
